Update build configuration for zip,rpm and deb