@@ -352,6 +352,14 @@
 						<artifactId>slf4j-log4j12</artifactId>
 						<groupId>org.slf4j</groupId>
 					</exclusion>
+					<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-web</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-webmvc</artifactId>
+					</exclusion>
 				</exclusions>
 			</dependency>
 
@@ -767,328 +775,6 @@ org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UT
 								</content>
 							</file>
 						</additionalConfig>
-					</configuration>
-				</plugin>
-
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>appassembler-maven-plugin</artifactId>
-					<version>1.9</version>
-					<executions>
-						<execution>
-							<id>daemons</id>
-							<phase>package</phase>
-							<goals>
-								<goal>generate-daemons</goal>
-							</goals>
-							<configuration>
-								<licenseHeaderFile>${basedir}/license-header.txt</licenseHeaderFile>
-								<useWildcardClassPath>true</useWildcardClassPath>
-								<repositoryLayout>flat</repositoryLayout>
-								<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
-								<copyConfigurationDirectory>true</copyConfigurationDirectory>
-								<configurationDirectory>conf</configurationDirectory>
-								<logsDirectory>logs</logsDirectory>
-								<daemons>
-									<daemon>
-										<id>${component.id}d</id>
-										<commandLineArguments>
-											<commandLineArgument>--spring.config.location=/usr/share/mandrel/conf/${component.id}.yml</commandLineArgument>
-										</commandLineArguments>
-										<jvmSettings>
-											<initialMemorySize>1024</initialMemorySize>
-											<maxMemorySize>1024</maxMemorySize>
-											<maxStackSize>128</maxStackSize>
-											<extraArguments>
-												<extraArgument>-Dlogback.configurationFile=/usr/share/mandrel/conf/logback.xml</extraArgument>
-												<extraArgument>-Dlogging.file=logs/${component.id}d.log</extraArgument>
-												<extraArgument>-Dlogging.mode=file</extraArgument>
-												<extraArgument>-server</extraArgument>
-												<extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
-												<extraArgument>-XX:+CMSParallelRemarkEnabled</extraArgument>
-												<extraArgument>-XX:+UseCMSInitiatingOccupancyOnly</extraArgument>
-												<extraArgument>-XX:+ScavengeBeforeFullGC</extraArgument>
-												<extraArgument>-XX:+CMSScavengeBeforeRemark</extraArgument>
-												<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
-												<extraArgument>-verbose:gc</extraArgument>
-												<extraArgument>-XX:+PrintGCDetails</extraArgument>
-												<extraArgument>-Xloggc:logs/gc.%t.%p.log</extraArgument>
-												<extraArgument>-XX:+UseGCLogFileRotation</extraArgument>
-												<extraArgument>-XX:NumberOfGCLogFiles=10</extraArgument>
-												<extraArgument>-XX:GCLogFileSize=100M</extraArgument>
-												<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
-												<extraArgument>-XX:HeapDumpPath=logs/${component.id}d-heapdump`date`.hprof</extraArgument>
-												<extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
-											</extraArguments>
-										</jvmSettings>
-										<wrapperMainClass>${component.class.wrapper}</wrapperMainClass>
-										<platforms>
-											<platform>jsw</platform>
-										</platforms>
-										<generatorConfigurations>
-											<generatorConfiguration>
-												<generator>jsw</generator>
-												<includes>
-													<include>linux-x86-32</include>
-													<include>linux-x86-64</include>
-												</includes>
-												<configuration>
-													<property>
-														<name>wrapper.logfile</name>
-														<value>../logs/${component.id}-wrapper.log</value>
-													</property>
-												</configuration>
-											</generatorConfiguration>
-										</generatorConfigurations>
-									</daemon>
-								</daemons>
-							</configuration>
-						</execution>
-						<execution>
-							<id>programs</id>
-							<phase>package</phase>
-							<goals>
-								<goal>assemble</goal>
-							</goals>
-							<configuration>
-								<programs>
-									<program>
-										<id>${component.id}</id>
-										<mainClass>${component.class.main}</mainClass>
-										<commandLineArguments>
-											<commandLineArgument>--spring.config.location=/usr/share/mandrel/conf/${component.id}.yml</commandLineArgument>
-										</commandLineArguments>
-										<jvmSettings>
-											<initialMemorySize>1024m</initialMemorySize>
-											<maxMemorySize>1024m</maxMemorySize>
-											<maxStackSize>128m</maxStackSize>
-											<extraArguments>
-												<extraArgument>-Dlogback.configurationFile=/usr/share/mandrel/conf/logback.xml</extraArgument>
-												<extraArgument>-Dlogging.file=logs/${component.id}.log</extraArgument>
-												<extraArgument>-Dlogging.mode=file</extraArgument>
-												<extraArgument>-server</extraArgument>
-												<extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
-												<extraArgument>-XX:+CMSParallelRemarkEnabled</extraArgument>
-												<extraArgument>-XX:+UseCMSInitiatingOccupancyOnly</extraArgument>
-												<extraArgument>-XX:+ScavengeBeforeFullGC</extraArgument>
-												<extraArgument>-XX:+CMSScavengeBeforeRemark</extraArgument>
-												<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
-												<extraArgument>-verbose:gc</extraArgument>
-												<extraArgument>-XX:+PrintGCDetails</extraArgument>
-												<extraArgument>-Xloggc:logs/gc.%t.%p.log</extraArgument>
-												<extraArgument>-XX:+UseGCLogFileRotation</extraArgument>
-												<extraArgument>-XX:NumberOfGCLogFiles=10</extraArgument>
-												<extraArgument>-XX:GCLogFileSize=100M</extraArgument>
-												<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
-												<extraArgument>-XX:HeapDumpPath=logs/${component.id}-heapdump`date`.hprof</extraArgument>
-												<extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
-											</extraArguments>
-										</jvmSettings>
-									</program>
-								</programs>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-
-				<!-- <plugin> -->
-				<!-- <artifactId>maven-resources-plugin</artifactId> -->
-				<!-- <version>2.7</version> -->
-				<!-- <executions> -->
-				<!-- <execution> -->
-				<!-- <id>copy-resources</id> -->
-				<!-- <phase>package</phase> -->
-				<!-- <goals> -->
-				<!-- <goal>copy-resources</goal> -->
-				<!-- </goals> -->
-				<!-- <configuration> -->
-				<!-- <outputDirectory>${project.build.directory}/generated-resources/appassembler/jsw/mandrel/lib</outputDirectory> -->
-				<!-- <resources> -->
-				<!-- <resource> -->
-				<!-- <directory>lib/sigar</directory> -->
-				<!-- </resource> -->
-				<!-- </resources> -->
-				<!-- </configuration> -->
-				<!-- </execution> -->
-				<!-- </executions> -->
-				<!-- </plugin> -->
-
-				<plugin>
-					<artifactId>jdeb</artifactId>
-					<groupId>org.vafer</groupId>
-					<version>1.0.1</version>
-					<executions>
-						<execution>
-							<phase>package</phase>
-							<goals>
-								<goal>jdeb</goal>
-							</goals>
-							<configuration>
-								<verbose>true</verbose>
-								<controlDir>${basedir}/src/deb/control</controlDir>
-								<dataSet>
-									<data>
-										<src>target/generated-resources/appassembler/jsw/mandrel/bin/</src>
-										<type>directory</type>
-										<excludes>*.bat, .DS_Store, *.exe</excludes>
-										<mapper>
-											<type>perm</type>
-											<prefix>/usr/share/mandrel/bin</prefix>
-											<filemode>755</filemode>
-											<user>root</user>
-											<group>root</group>
-										</mapper>
-									</data>
-									<data>
-										<src>target/generated-resources/appassembler/jsw/mandrel/lib/</src>
-										<includes>*</includes>
-										<type>directory</type>
-										<mapper>
-											<type>perm</type>
-											<prefix>/usr/share/mandrel/lib</prefix>
-											<user>root</user>
-											<group>root</group>
-										</mapper>
-									</data>
-									<data>
-										<src>${project.basedir}/src/deb/init.d/</src>
-										<type>directory</type>
-										<excludes>.DS_Store</excludes>
-										<mapper>
-											<type>perm</type>
-											<prefix>/etc/init.d</prefix>
-											<filemode>755</filemode>
-											<user>root</user>
-											<group>root</group>
-										</mapper>
-									</data>
-									<data>
-										<src>target/generated-resources/appassembler/jsw/mandrel/conf/</src>
-										<type>directory</type>
-										<mapper>
-											<type>perm</type>
-											<prefix>/usr/share/mandrel/conf/</prefix>
-											<user>root</user>
-											<group>root</group>
-										</mapper>
-									</data>
-								</dataSet>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>rpm-maven-plugin</artifactId>
-					<version>2.1-alpha-3</version>
-					<executions>
-						<execution>
-							<id>attach-rpm</id>
-							<goals>
-								<goal>attached-rpm</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<copyright>Apache 2</copyright>
-						<distribution>Apache 2</distribution>
-						<group>Application/Internet</group>
-						<prefix>/usr</prefix>
-						<changelogFile>src/changelog</changelogFile>
-						<defineStatements>
-							<defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
-							<defineStatement>_binaries_in_noarch_packages_terminate_build 0</defineStatement>
-						</defineStatements>
-						<defaultFilemode>644</defaultFilemode>
-						<defaultDirmode>755</defaultDirmode>
-						<defaultUsername>root</defaultUsername>
-						<defaultGroupname>root</defaultGroupname>
-						<mappings>
-							<mapping>
-								<directory>/usr/share/mandrel/bin/</directory>
-								<filemode>755</filemode>
-								<sources>
-									<source>
-										<location>target/generated-resources/appassembler/jsw/mandrel/bin/</location>
-										<excludes>
-											<exclude>*.bat</exclude>
-										</excludes>
-									</source>
-								</sources>
-							</mapping>
-							<mapping>
-								<directory>/etc/sysconfig/</directory>
-								<configuration>noreplace</configuration>
-								<sources>
-									<source>
-										<location>src/rpm/sysconfig</location>
-										<includes>
-											<include>mandrel</include>
-										</includes>
-									</source>
-								</sources>
-							</mapping>
-							<mapping>
-								<directory>/etc/rc.d/init.d/</directory>
-								<filemode>755</filemode>
-								<configuration>true</configuration>
-								<sources>
-									<source>
-										<location>src/rpm/init.d/mandrel</location>
-									</source>
-								</sources>
-							</mapping>
-							<mapping>
-								<directory>/usr/share/mandrel/lib/</directory>
-								<sources>
-									<source>
-										<location>target/generated-resources/appassembler/jsw/mandrel/lib/</location>
-									</source>
-								</sources>
-							</mapping>
-							<mapping>
-								<directory>/usr/share/mandrel/conf/</directory>
-								<sources>
-									<source>
-										<location>target/generated-resources/appassembler/jsw/mandrel/conf/</location>
-									</source>
-								</sources>
-							</mapping>
-							<mapping>
-								<directory>/var/log/mandrel/</directory>
-								<filemode>755</filemode>
-								<username>mandrel</username>
-								<groupname>mandrel</groupname>
-							</mapping>
-							<mapping>
-								<directory>/usr/share/mandrel/</directory>
-								<sources>
-									<source>
-										<location>.</location>
-										<includes>
-											<include>README.textile</include>
-										</includes>
-									</source>
-								</sources>
-							</mapping>
-						</mappings>
-						<preinstallScriptlet>
-							<scriptFile>src/rpm/scripts/preinstall</scriptFile>
-							<fileEncoding>utf-8</fileEncoding>
-						</preinstallScriptlet>
-						<postinstallScriptlet>
-							<scriptFile>src/rpm/scripts/postinstall</scriptFile>
-							<fileEncoding>utf-8</fileEncoding>
-						</postinstallScriptlet>
-						<preremoveScriptlet>
-							<scriptFile>src/rpm/scripts/preremove</scriptFile>
-							<fileEncoding>utf-8</fileEncoding>
-						</preremoveScriptlet>
-						<postremoveScriptlet>
-							<scriptFile>src/rpm/scripts/postremove</scriptFile>
-							<fileEncoding>utf-8</fileEncoding>
-						</postremoveScriptlet>
 					</configuration>
 				</plugin>
 
